--- a/HTML/Aboutus.html
+++ b/HTML/Aboutus.html
@@ -90,7 +90,7 @@
 
 
                     <div class="headalign" style="text-align: center;">         
-                        <b><a class="bob" href="GroupWork.html">Home</a></b><!--Internal link -->
+                        <b><a class="bob" href="index.html">Home</a></b><!--Internal link -->
 
                         <b><a class="bob" href="blog1.html">Blog</a></b>
 
