--- a/HTML/blog1.html
+++ b/HTML/blog1.html
@@ -217,7 +217,7 @@
 
 
                     <div class="headalign" style="text-align: center;">         
-                        <b><a class="bob" href="GroupWork.html">Home</a></b>   <!--internal links-->
+                        <b><a class="bob" href="index.html">Home</a></b>   <!--internal links-->
 
                         <b><a class="bob current" href="blog1.html">Blog</a></b> <!--current class used to distinguish the currently opened webpage in the nav bar-->
 
