--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<title>ZV 5 Printers - Home</title>
-			<link rel="stylesheet" href="../CSS/file.css">
+			<link rel="stylesheet" href="CSS/file.css">
 			<link rel="shortcut icon"  href="../images/v.png">
 			<link rel="stylesheet" type="text/css" href="HTML/blog1.html">
-	        <link rel="stylesheet" href="productpage.html">
-			<link rel="stylesheet" href="Aboutus.html">
-			<link rel="stylesheet" href="research.html">
+	        <link rel="stylesheet" href="HTML/productpage.html">
+			<link rel="stylesheet" href="HTML/Aboutus.html">
+			<link rel="stylesheet" href="HTML/research.html">
 			<!--use of external css-->
 		</head>
 
