Update login button link to relative path

--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -29,7 +29,7 @@
 					<a href="GroupWork.html" style="color: white;">Forgot password ?</a>
 				</div>
 
-				<button class="click" type="submit"> <a href="index.html" onclick="validateForm()">Log in</a></button><br> <!--on validation of the form, you return to homepage.-->
+				<button class="click" type="submit"> <a href="../index.html" onclick="validateForm()">Log in</a></button><br> <!--on validation of the form, you return to homepage.-->
 
 				<button class="click" type="button"><a href="productpage.html">Let's go shoppin!</a></button>
 
