Update Home link to point to the correct path

--- a/HTML/productpage.html
+++ b/HTML/productpage.html
@@ -127,7 +127,7 @@ transition: background-color 0.3s ease;
                     <img src="../images/logo22.png">
                 </div>
                 <div class="headalign" style="text-align: center;">
-                    <b><a class="bob" href="index.html">Home</a></b> <!--internal links-->
+                    <b><a class="bob" href="../index.html">Home</a></b> <!--internal links-->
                     <b><a class="bob" href="blog1.html">Blog</a></b>
                     <b><a class="bob current" href="productpage.html">Product</a></b>  <!--current class used to distinguish the currently opened webpage in the nav bar-->
                     <b><a class="bob" href="research.html">Research</a></b>
