--- a/HTML/research.html
+++ b/HTML/research.html
@@ -22,7 +22,7 @@
 
 
 					<div class="headalign" style="text-align: center;">			
-						<b><a class="bob" href="index.html">Home</a></b> <!--Internal links -->
+						<b><a class="bob" href="../index.html">Home</a></b> <!--Internal links -->
 
 						<b><a class="bob" href="blog1.html">Blog</a></b><!--Internal links -->
 
